--- a/refvision/web/templates/video.html
+++ b/refvision/web/templates/video.html
@@ -63,6 +63,8 @@
       <p>Error: Unable to load video from S3.</p>
     {% endif %}
 
+    <p><a href="{{ url_for('show_decision') }}">See Decision</a></p>
+
     <p><a href="{{ url_for('logout') }}">Logout</a></p>
 </body>
 </html>
